// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing to a repo that does not exist 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find resource: \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing to a repo that the used does not have acccess to 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find resource: \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing when already subscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "You're already subscribed to \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing with a bad url 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`wat?\` does not appear to be a GitHub link.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing and unsubscribing to a repository 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing and unsubscribing to a repository 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Unsubscribed <#C2147483705> from <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing with repository shorthand 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing from a specific type of notification 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing from a specific type of notification 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing when not subscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "You're not currently subscribed to \`atom/atom\`
Use \`/github subscribe atom/atom\` to subscribe.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing with a bad url 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`wat?\` does not appear to be a GitHub link.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user without the GitHub App installed prompts to install app 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "https://github.com/apps/slack-bkeepers/installations/new/permissions?target_id=13629408",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Looks like the app isn't installed on your repository. Install it to proceed.",
    },
  ],
  "response_type": "ephemeral",
}
`;
